feat: Initial release and setup of python-turkish-translation v0.9.1. Added I/O, len, type, value conversion and comprehensive Turkish Turtle API.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-/grafiktest.py
-/test.py
+# Sanal Ortamlar
+venv/
+.venv/
+env/
+
+# Python Derleme Çıktıları
+__pycache__/
+*.pyc
+*.pyo
+
+# Paketleme ve Dağıtım
+dist/
+build/
+*.egg-info/
+
+# Geliştirme Ortamı (VS Code)
+.vscode/
